# cookiecutter-scverse

./: .codespellrc  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .prettierrc.yml  .taplo.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  biome.jsonc  cookiecutter.json
.claude/skills/scverse-template-update/: SKILL.md  sync_helper.py
.github/assets/: cookiecutter-scverse-instance.json
.github/scripts/: query_check_status.py
.github/workflows/: cruft-prs.yml  deploy-instance-pr-actions.yml  deploy-instance-repo.yml  deploy-instance.yml  dploy-instance-pr-actions.yml  dploy-instance-pr-close.yml  pre-commit.yaml  propagate-pre-commit.yml  template-issues.yml  test.yaml  test.yml
hooks/: .make_rich_output.py  post_gen_project.py  post_gen_project.sh  pre_gen_project.py  pre_gen_project.sh
scripts/: pyproject.toml
scripts/src/scverse_template_scripts/: _log.py  backoff.py  cruft_prs.py  make_rich_output.py  template_issues.py
scripts/src/testing/scverse_template_scripts/: __init__.py  _pytest.py
scripts/tests/: test_build.py  test_cruft.py  test_issues.py
{{cookiecutter.project_name}}/: .bumpversion.cfg  .codecov.yaml  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README-pre-commit.md  README-pre-commit.rst  README.md  biome.jsonc  pyproject.toml
{{cookiecutter.project_name}}/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
{{cookiecutter.project_name}}/.github/workflows/: build.yaml  env-matrix.py  release.yaml  release.yml  sync.yaml  test.yaml
{{cookiecutter.project_name}}/docs/: api.md  conf.py  contributing.md  developer_docs.md  index.md  index.rst  references.bib  references.md  template_usage.md  {% if cookiecutter._render_devdocs %}template_usage.md{% endif %}
{{cookiecutter.project_name}}/docs/_templates/autosummary/: class.rst
{{cookiecutter.project_name}}/docs/extensions/: member_type.py  typed_returns.py
{{cookiecutter.project_name}}/docs/notebooks/: example.ipynb
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/pl/: basic.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/pp/: basic.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/tl/: basic.py
{{cookiecutter.project_name}}/tests/: conftest.py  test_basic.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/pl/: __init__.py  basic.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/plotting/: __init__.py  basic.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/pp/: __init__.py  basic.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/preprocessing/: basic.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/tl/: __init__.py  basic.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/tools/: basic.py
