[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "scverse-template-scripts"
dynamic = ["version"]
description = "scripts for ecosystem package data"
readme = "../README.md"
requires-python = ">=3.11"
license = "GPL-3.0"
authors = [{ name = "Philipp A.", email = "flying-sheep@web.de" }]
urls.Documentation = "https://github.com/scverse/cookiecutter-scverse#readme"
urls.Issues = "https://github.com/scverse/cookiecutter-scverse/issues"
urls.Source = "https://github.com/scverse/cookiecutter-scverse"
dependencies = [
    "cruft",
    "rich",
    "typer",
    "furl",
    "GitPython",
    "PyGitHub",
    "PyYAML",
]

[project.optional-dependencies]
test = ["pytest", "pytest-git", "pytest-network", "pytest-responsemock"]

[project.scripts]
send-cruft-prs = "scverse_template_scripts.cruft_prs:cli"
make-rich-output = "scverse_template_scripts.make_rich_output:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0"

[tool.hatch.envs.default]
python = "3.11"

[tool.hatch.envs.test]
features = ["test"]

[tool.hatch.envs.test.scripts]
test = "pytest"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-pgit",
    "-pnetwork",
    "--disable-network",
    "-presponsemock"
]
filterwarnings = ["error"]

[tool.black]
target-version = ["py310"] # py311 not supported yet
line-length = 120

[tool.ruff]
target-version = "py311"
line-length = 120
allowed-confusables = ["’", "×"]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "S101", # assert should be allowed
    "S603", # subprocess with shell=False should be allowed
    "S311", # we don’t need cryptographically secure RNG

]
unfixable = ["RUF001"] # never “fix” “confusables”

[tool.ruff.isort]
known-first-party = ["scverse_template_scripts"]

[tool.ruff.per-file-ignores]
"tests/*.py" = [
    "ARG001", # pytest fixtures don’t need to be used
    "PLR0913", # allow as many pytest fixtures being used as one likes

]
