[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "scverse-template-scripts"
dynamic = ["version"]
description = "scripts for ecosystem package data"
readme = "../README.md"
requires-python = ">=3.11"
license = "GPL-3.0"
authors = [{ name = "Philipp A.", email = "flying-sheep@web.de" }]
urls.Documentation = "https://github.com/scverse/cookiecutter-scverse#readme"
urls.Issues = "https://github.com/scverse/cookiecutter-scverse/issues"
urls.Source = "https://github.com/scverse/cookiecutter-scverse"
dependencies = [
    "cruft",
    "rich",
    "typer",
    "furl",
    "GitPython",
    "PyGitHub >= 2",
    "PyYAML",
    "pre-commit",    # is ran by cruft
]

[project.optional-dependencies]
test = ["pytest", "pytest-git", "pytest-socket", "pytest-responsemock"]

[project.scripts]
send-cruft-prs = "scverse_template_scripts.cruft_prs:cli"
make-rich-output = "scverse_template_scripts.make_rich_output:main"

[tool.hatch.build.targets.wheel]
packages = ["src/testing", "src/scverse_template_scripts"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0"

[tool.hatch.envs.default]
python = "3.11"

[tool.hatch.envs.hatch-test]
features = ["test"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--disable-socket",
    "-presponsemock",
    "-ptesting.scverse_template_scripts._pytest",
]
filterwarnings = [
    "error",
    # https://github.com/man-group/pytest-plugins/issues/224
    "ignore::DeprecationWarning:pytest_shutil",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
allowed-confusables = ["’", "×"]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TCH",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "S101",   # assert should be allowed
    "S603",   # subprocess with shell=False should be allowed
    "S311",   # we don’t need cryptographically secure RNG
    "ISC001", # conflicts with formatter
]
unfixable = ["RUF001"] # never “fix” “confusables”

[tool.ruff.lint.isort]
known-first-party = [
    "scverse_template_scripts",
    "testing.scverse_template_scripts",
]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-type-checking]
exempt-modules = []
strict = true

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "ARG001",  # pytest fixtures don’t need to be used
    "PLR0913", # allow as many pytest fixtures being used as one likes
]
