[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "scverse-template-scripts"
description = "scripts for ecosystem package data"
readme = "../README.md"
license = "GPL-3.0"
authors = [
  { name = "Philipp A.", email = "flying-sheep@web.de" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "cruft",
  "cyclopts>=3.10",
  "furl",
  "gitpython",
  "pre-commit",     # is ran by cruft
  "pygithub>=2",
  "pyyaml",
  "rich",
]
optional-dependencies.test = [
  "pytest",
]
urls.Documentation = "https://github.com/scverse/cookiecutter-scverse#readme"
urls.Issues = "https://github.com/scverse/cookiecutter-scverse/issues"
urls.Source = "https://github.com/scverse/cookiecutter-scverse"
scripts.make-rich-output = "scverse_template_scripts.make_rich_output:main"
scripts.send-cruft-prs = "scverse_template_scripts.cruft_prs:cli"

[tool.hatch.build.targets.wheel]
packages = [ "src/testing", "src/scverse_template_scripts" ]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0"

[tool.hatch.envs.default]
python = "3.11"

[tool.hatch.envs.hatch-test]
features = [ "test" ]

[tool.ruff]
line-length = 120

format.docstring-code-format = true

lint.select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "Q",
  "RUF",
  "S",
  "SIM",
  "T",
  "TC",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "ISC001", # conflicts with formatter
  "S101",   # assert should be allowed
  "S311",   # we don’t need cryptographically secure RNG
  "S603",   # subprocess with shell=False should be allowed
]
lint.unfixable = [
  "RUF001", # never “fix” “confusables”
]
lint.allowed-confusables = [ "×", "’" ]
lint.flake8-type-checking.exempt-modules = [  ]
lint.flake8-type-checking.runtime-evaluated-decorators = [ "cyclopts.App.default" ]
lint.flake8-type-checking.strict = true
lint.isort.known-first-party = [ "scverse_template_scripts", "testing.scverse_template_scripts" ]
lint.isort.required-imports = [ "from __future__ import annotations" ]

[tool.pyproject-fmt]
column_width = 120

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
  "-ptesting.scverse_template_scripts._pytest",
]
filterwarnings = [
  "error",
  # https://github.com/man-group/pytest-plugins/issues/224
  "ignore::DeprecationWarning:pytest_shutil",
]
